# PA2-Velk-loha

./: README.md
Velka_uloha/: CMakeLists.txt  all_in_one.cpp  test.cpp
Velka_uloha/headers/: CMyOwnExprBuilder.hpp  CNode.hpp  CPos.hpp  CSpreadsheet.hpp  pair_util.hpp
Velka_uloha/headers/CExpr/: CExpr_abstract.hpp  Literals.hpp  Operators.hpp
Velka_uloha/implementations/: CMyOwnExprBuilder.cpp  CNode.cpp  CPos.cpp  CSpreadsheet.cpp
Velka_uloha/implementations/CExpr/: Literals.cpp  Operators.cpp
